# api-node

./: .env  .env.example  .gitignore  Cargo.toml  README.md  WindowManager.js  index.html  main.js  package-lock.json  package.json  readme  readme.md  server.js
actixeb/src/config/: database.rs  settings.rs
backend/: .env  Cargo.toml
backend/node/: package-lock.json  package.json
backend/src/: main.rs
backend/src/config/: database.rs  settings.rs
backend/src/controllers/: user_controller.rs
backend/src/models/: user_model.rs
backend/src/routes/: user_route.rs
backend/src/services/: user.rs
config/: corsOptions.js
database/: readme.md
frontend/: angular.json
frontend/frontend/: angular.json  package-lock.json
middleware/: errorHandler.js  logger.js
models/: User.js
node.js/: package-lock.json
routes/: root.js
src/: index.ts  main.rs
src/config/: settings.rs
src/controllers/: LicenceController.rs  UserController.rs  licence_controller.rs  mod.rs  user_controller.rs
src/database/: conn.rs
src/models/: LicenceModel.rs  empresa_licence.rs  mod.rs  user_model.rs  usuario.rs
src/routes/: LicenceRoute.rs  UserRoute.rs  legado_route.rs  licence_route.rs  mod.rs  user_route.rs
src/services/: conversa.rs  mensagem.rs  mod.rs  usuario.rs
src/stripe/: piloto.rs
views/: 404.html  index.html
