[package]
name = "api_actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "*", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }