[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-rust"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
json = "0.12.4"
jsonwebtoken = "9.3.0"
reqwest = "0.12.4"
serde = "1.0.198"
serde_json = "1.0.116"
surrealdb = "1.4.2"
uuid = "1.8.0"
